--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="styles/main.css">
-		<link rel="stylesheet" href="styles/form.css">
+		<link rel="stylesheet" href="styles/burger.css">
 		<title>Orbital speed</title>
 	</head>
 
@@ -25,27 +25,21 @@
 
 			<aside class="leftAside">
 
-				<h5>Menu:</h5>
-				<ul>
-					<li><a href="index.html">Orbital speed</a></li>
-					<li><a href="parabola.html">Parabola speed</a></li>
-					<li><a href="hyperbola.html">Hyperbola speed</a></li>
-					<li><a href="galaxy.html">Speed to exit the galaxy</a></li>
-					<li><a href="apparatus.html">Speed developing apparatus</a></li>
-				</ul>
-
-				<form method="POST" action="/form" id="form" class="formBody">
-					<h3>Send to email</h3>
-					<div class="formClass">
-						<label for="formName" class="formLabel">Name*:</label>
-						<input id="formName" type="text" name="name" class="formInput _req _name">
-					</div>
-					<div class="formClass">
-						<label for="formEmail" class="formLabel">E-mail*:</label>
-						<input id="formEmail" type="text" name="email" class="formInput _req _email">
-					</div>
-					<button type="submit" class="formButton">Send</button>
-				</form>
+				<div class="burgerMenu">
+					<input type="checkbox" id="check_menu">
+					<label for="check_menu"><h5>MENU:</h5></label>
+					<div class="burgerLine l1"></div>
+					<div class="burgerLine l2"></div>
+					<div class="burgerLine l3"></div>
+					<div class="burgerLine l4"></div>
+					<nav class="menu_links">
+						<a href="/index.html">Orbital speed</a>
+						<a href="/parabola.html">Parabola speed</a>
+						<a href="/hyperbola.html">Hyperbola speed</a>
+						<a href="/galaxy.html">Speed to exit the galaxy</a>
+						<a href="/apparatus.html">Speed developing apparatus</a>
+					</nav>
+				</div>
 
 			</aside>
 
