--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,10 @@
 <html>
 
 	<head>
-		<script>
-			window.onload = function() {
-				const queryString = window.location.search
-				const urlParams = new URLSearchParams(queryString)
-				const message = urlParams.get('message')
-				if (message) {
-					setTimeout(() => {
-						alert(message)
-					}, 500)
-				}
-			}
-		</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/burger.css">
+		<link rel="stylesheet" href="styles/slider.css">
 		<title>Orbital speed</title>
 	</head>
 
@@ -62,6 +51,32 @@
 						</div>
 
 						<article class="mainText">
+
+							<div class="slider">
+								<div class=slider_feed>
+
+									<input type="radio" name="r" id="r1" checked>
+									<input type="radio" name="r" id="r2">
+									<input type="radio" name="r" id="r3">
+									<input type="radio" name="r" id="r4">
+
+									<div class="portret n1"><img src="img/Kepler.jpeg" alt="Johannes Kepler"></div>
+									<div class="portret"><img src="img/Newton.jpeg" alt="Isaac Newton"></div>
+									<div class="portret"><img src="img/Einshtein.jpeg" alt="Albert Einstein"></div>
+									<div class="portret"><img src="img/Korolev.jpeg" alt="Sergej Korolev"></div>
+
+								</div>
+
+								<div class=slider_buttons>
+
+									<label for="r1" class="sliderBut"></label>
+									<label for="r2" class="sliderBut"></label>
+									<label for="r3" class="sliderBut"></label>
+									<label for="r4" class="sliderBut"></label>
+
+								</div>
+							</div>
+
 
 							<p>In the inertial reference frame, only one force will act on an object moving in a circular orbit around the Earth - the force of gravity of the Earth. In this case, the movement of the object will be neither uniform nor uniformly accelerated. This happens because the speed and acceleration (the values ​​are not scalar, but vector) in this case do not satisfy the conditions of uniformity / uniform acceleration of motion - that is, motion with a constant (in magnitude and direction) speed / acceleration.</p>
 
