on screen click close

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 
 				<div class="burgerMenu">
 					<input type="checkbox" id="check_menu">
-					<label for="check_menu"><h5>MENU:</h5></label>
+					<label class="backLable" for="check_menu"></label>
+					<label class="standartLable" for="check_menu"><h5>MENU:</h5></label>
 					<div class="burgerLine l1"></div>
 					<div class="burgerLine l2"></div>
 					<div class="burgerLine l3"></div>
